import "google/protobuf/empty.proto";

syntax = "proto3";

package hero;

service HeroService {
  rpc FindOne (HeroById) returns (Hero);
  rpc FindAll (google.protobuf.Empty) returns (HeroArray);
  rpc FindMany (stream HeroById) returns (stream Hero);
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}

message HeroArray {
  repeated Hero data = 1;
}